bims/static/css/map.css
/* ... */
.right-panel-icon {
    width: 70px;
}

.panel-icons p {
    font-size: 11pt;
}

.right-panel > .row {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

html, body, .map, .map-wrapper, #map-container {
    margin: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.panel-wrapper {
    top: 0;
    right: 0;
    position: absolute;
    height: 100%;
    width: 265px;
    pointer-events: none;
}

.right-panel {
    top: 0;
    right: 0;
    position: relative;
    height: 100%;
    width: 100%;
    max-width: 400px;
    background: rgb(255, 255, 255);
    color: #4e4e4e;
    z-index: 2000;
    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Firefox 3.5 - 3.6 */
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2); /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
    border-radius: 0;
    pointer-events: auto;
}

.title-side-panel {
    font-size: 10pt;
}

.search-result-info {
    padding: 15px;
    color: black !important;
    font-size: 10pt;
}

.right-panel-header {
    font-size: 17pt;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 15px;
    padding-right: 10px;
    min-height: 60px;
    background: #1b900d;
    color: white;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.right-panel-header .fa-map-marker {
    color: #AFC9FA;
}

.right-panel-title {
    padding-top: 10px;
    padding-left: 0;
    line-height: 1.2;
}

.header-panel-button:hover {
    cursor: pointer;
}

.side-panel-info {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    padding-top: 60px;
}

.map-control-panel, .download-control-panel {
    background-color: white;
    position: absolute;
    left: 0;
    top: 0;
    margin-top: 90px;
    padding-left: 6px;
    padding-right: 6px;
    font-size: 18pt;
    text-align: center;
    color: #4e4e4e;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    margin-left: 31px;
    padding-top: 0;
    border-top: none;
    width: 54px;
    z-index: 100;
}

.download-control-panel .download-format-selector-container {
    margin-left: 49px;
    margin-top: 0;
    display: none;
    width: auto;
}

.zoom-control {
    font-size: 11pt;
    padding: 7px 0;
    position: absolute;
    left: 0;
    top: 60px;
    background-color: rgba(219, 175, 0, 0.7);
    margin-left: 31px;
    border-radius: 0;
    color: white;
    width: 54px;
    height: 33px;
    z-index: 11;
    text-align: center;
    box-shadow: none;
}

.sub-zoom-control {
    padding-left: 0 !important;
    padding-right: 0 !important;
}

.sub-zoom-control:hover {
    color: #323437 !important;
}

.sub-control-panel {
    padding-top: 5px;
    padding-bottom: 5px;
    margin-left: -6px;
    margin-right: -6px;
}

.control-panel-selected {
    background-color: #1b900d;
    padding-right: 0;
    color: white !important;
}

.sub-control-panel:hover, .sub-zoom-control:hover {
    cursor: pointer;
    color: #323437;
}

@media (max-width: 800px) and (min-width: 500px) {
    .panel-wrapper {
        width: 40%;
    }
}

@media (max-width: 500px) {
    .panel-wrapper {
        width: 100%;
    }
}

.green {
    color: #436461;
    font-size: 20pt;
    margin-bottom: 0;
}

.about-links {
    border-left: 2px solid #436461;
    padding: 15px 20px;
}

.about-links p {
    margin-bottom: 5px;
}

.dropdown-toggle {
    color: transparent;
}

.panel-loading {
    display: none;
    margin-top: 50px;
}

.panel-loading img {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.map-control-panel-box {
    width: 265px;
    background-color: white;
    position: absolute;
    top: 0;
    color: black;
    padding: 5px 15px 0;
    border: none;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
    font-weight: normal;
    border-radius: 0;
    margin-left: 85px;
    margin-top: 60px;
    z-index: 100;
}

.map-search-result {
    margin-left: 351px !important;
    padding-bottom: 0;
    min-height: 209px;
}

.map-search-result .search-box {
    color: white;
    padding-top: 10px;
    font-weight: 700;
    font-size: 16px;
}

#search-result-content {
    margin-right: -15px;
    margin-left: -15px;
}

#search-result-content .search-results-total {
    background: ghostwhite;
    padding-right: 15px;
    padding-left: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    font-weight: normal;
    font-size: 16px;
}

#search-result-content .result-search {
    font-size: 8pt;
    text-align: left;
    padding-left: 17px;
    margin-bottom: 0;
    padding-right: 17px;
    background-color: white;
    color: #4e4e4e;
    cursor: pointer;
}

#search-result-content .result-search:hover {
    background: ghostwhite;
}

#search-result-content p {
    margin-bottom: 0;
}

#search-result-content .search-results-section {
    max-height: 500px;
    overflow-y: auto;
    margin-right: -17px;
}

.search-results-wrapper {
    overflow-x: hidden;
}

.layers-selector-container {
    display: none;
    padding-bottom: 0 !important;
    max-height: 500px;
}

.layers-selector-container .content {
    border-top: 1px solid darkgray;
    margin-top: 3px;
    max-height: 500px;
    overflow-y: auto;
}

#layers-selector {
    max-height: 450px;
    padding: 0;
}

#layers-selector li {
    max-width: 100%;
    height: auto;
    padding: 0;
}

#layers-selector li:hover .options {
    display: block;
}

#layers-selector li:hover {
    background-color: rgba(195, 195, 195, 0.17);
}

#layers-selector li .row-title {
    padding: 5px;
    text-overflow: ellipsis;
    max-width: 250px;
    overflow: hidden;
}

#layers-selector li .row-title label {
    margin-bottom: 0;
}

#layers-selector .options {
    padding-bottom: 10px;
    border-bottom: 1px solid rgba(206, 206, 206, 0.55);
}

.transparency-slider {
    padding-left: 0;
    padding-right: 0;
    padding-top: 6px;
}
/* ... */

